Hide video at startup to avoid flicker

--- a/wwwroot/stylesheets/video.css
+++ b/wwwroot/stylesheets/video.css
@@ -1,4 +1,4 @@
-﻿
+
 .video-container {
 	display: flex;
 	justify-content: center;
@@ -13,6 +13,8 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+
+	visibility: hidden;
 }
 
 .video {
